# SVF-OCaml

./: README.md  TASKS.md  build.sh  dune-project  svf-ocaml.opam
.github/workflows/: ci.yml
_build/: .db  .digest-db  trace.csexp
_build/default/: META.svf-ocaml  README.md  svf-ocaml.dune-package  svf-ocaml.install
_build/default/.dune/: configurator  configurator.v2
_build/default/demo/: demo.ml
_build/default/demo/.demo.eobjs/byte/: dune__exe__Demo.cmti
_build/default/demo/.demo.eobjs/native/: dune__exe__Demo.cmx
_build/default/demo/.merlin-conf/: exe-demo
_build/default/lib/: graphs.ml  memory_model.ml  memory_model_stubs.cpp  mta.ml  mta_stubs.cpp  saber.ml  svf.ml  svf_ocaml.cma  svf_ocaml.cmxa  svf_ocaml.ml-gen  svf_ocaml_types.h  svf_types_stubs.cpp  types.ml  wpa_stubs.cpp
_build/default/lib/.merlin-conf/: lib-svf-ocaml
_build/default/lib/.svf_ocaml.objs/: svf_ocaml__Ae.impl.d  svf_ocaml__Cfl.impl.d  svf_ocaml__Dda.impl.d  svf_ocaml__Graphs.impl.d  svf_ocaml__Memory_model.impl.all-deps  svf_ocaml__Memory_model.impl.d  svf_ocaml__Mssa.impl.d  svf_ocaml__Mta.impl.d  svf_ocaml__Saber.impl.d  svf_ocaml__Svf.impl.d  svf_ocaml__Svfir.impl.d  svf_ocaml__Wpa.impl.all-deps  svf_ocaml__Wpa.impl.d
_build/default/lib/.svf_ocaml.objs/byte/: svf_ocaml.cmi  svf_ocaml.cmo  svf_ocaml.cmt  svf_ocaml__Ae.cmi  svf_ocaml__Ae.cmo  svf_ocaml__Ae.cmt  svf_ocaml__Cfl.cmi  svf_ocaml__Cfl.cmo  svf_ocaml__Cfl.cmt  svf_ocaml__Dda.cmi  svf_ocaml__Dda.cmo  svf_ocaml__Dda.cmt  svf_ocaml__Graphs.cmi  svf_ocaml__Graphs.cmo  svf_ocaml__Graphs.cmt  svf_ocaml__Memory_model.cmi  svf_ocaml__Memory_model.cmo  svf_ocaml__Memory_model.cmt  svf_ocaml__Mssa.cmi  svf_ocaml__Mssa.cmo  svf_ocaml__Mssa.cmt  svf_ocaml__Mta.cmi  svf_ocaml__Mta.cmo  svf_ocaml__Mta.cmt  svf_ocaml__Saber.cmi  svf_ocaml__Saber.cmo  svf_ocaml__Saber.cmt  svf_ocaml__Svf.cmi  svf_ocaml__Svf.cmo  svf_ocaml__Svf.cmt  svf_ocaml__Svfir.cmi  svf_ocaml__Svfir.cmo  svf_ocaml__Svfir.cmt  svf_ocaml__Types.cmi  svf_ocaml__Types.cmo  svf_ocaml__Types.cmt  (+6 more)
_build/default/test_cases/.merlin-conf/: exe-test  exe-test2
_build/default/test_cases/.test.eobjs/: dune__exe__Test.impl.d  dune__exe__Test.intf.d
_build/default/test_cases/.test2.eobjs/: dune__exe.ml-gen  dune__exe__Test2.impl.d  dune__exe__Test2.intf.d
demo/: dune
lib/: ae.ml  ae_stubs.cpp  cfl.ml  dda.ml  dune  graphs.ml  graphs_stubs.cpp  mssa.ml  svf_ocaml_common.h  svf_ocaml_types.h  svf_stubs.cpp  svf_types_stubs.cpp  svfir.ml  svfir_stubs.cpp  types.ml  util.ml  wpa.ml  wpa_stubs.cpp
test_cases/: dune  test.ml  test2.ml
(+88 files in other folders)
